--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,12 +2,12 @@
   .side-bar__name
     .userbox
       .neme
-        masa 
+        = current_user.name
       .icons
         .icons2
         = link_to "#",  class: "icon_edit" do
           = icon('fas', 'edit')
-        = link_to "#",  class: "icon_cog" do
+        = link_to edit_user_path(current_user),class: "icon_cog" do
           = icon('fas','cog')
   .side-bar__list
     .side-bar__chart
