--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,13 +5,15 @@
         = current_user.name
       .icons
         .icons2
-        = link_to "#",  class: "icon_edit" do
+        = link_to new_group_path,  class: "icon_edit" do
           = icon('fas', 'edit')
         = link_to edit_user_path(current_user),class: "icon_cog" do
           = icon('fas','cog')
   .side-bar__list
-    .side-bar__chart
-      .side-bar__member
-        techcamp
-      .side-bar__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side-bar__chart
+        = link_to '#' do
+          .side-bar__member
+            = group.name
+          .side-bar__message
+            まだメッセージがありません
