--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,8 +12,8 @@
   .side-bar__list
     - current_user.groups.each do |group|
       .side-bar__chart
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .side-bar__member
             = group.name
           .side-bar__message
-            まだメッセージがありません
+            = group.show_last_message
